Added steps to making tacos list.

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -21,6 +21,7 @@
             <li>lettuce</li>
             <li>tomatoes</li>
             <li>guacamole</li>
+            <li>chili powder</li>
         </ul>
         <h3>Steps</h3>
         <ol>
@@ -32,6 +33,12 @@
                 <li>shred the cheese</li>
                 <li>chop the onion</li>
             </ul>
+            <li>Brown the meat in a pan</li>
+            <li>Season the meat</li>
+            <li>Drain the meet</li>
+            <li>Add chili powder</li>
+            <li>Add meat to taco shells</li>
+            <li>Add desired toppings</li>
         </ol>
     </body>
 
