Creation of other Recipe pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/tacos.html">Tacos</a>
+        <a href="recipes/chicken-sandwich.html">Chicken Sandwich</a>
+        <a href="recipes/pizza.html">Pizza</a>
     </body>
 
 </html>
