Addition of lists to pizza webpage

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,6 +9,25 @@
     <img src="../recipe-images/pizza.jpg" alt="Pizza Image" height="300" width="300">
     <p></p>
     <a href="../index.html">Recipes Home</a>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>pizza dough</li>
+        <li>pizza sauce</li>
+        <li>pepperoni</li>
+        <li>mozzarella cheese</li>
+        <li>gound black pepper</li>
+        <li>oregano</li>
+        <li>flour</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat oven to 500F</li>
+        <li>Make the pizza Sauce</li>
+        <li>Roll out the dough</li>
+        <li>Add pizza toppings (pepperoni)</li>
+        <li>Cook the pizza</li>
+        <li>Slice and serve</li>
+    </ol>
     
 </body>
 </html>
